@@ -17,7 +17,7 @@
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
 #include "nrange.h"
-#include "misc.h"
+#include "strreps.h"
 #include "log.h"
 #include "mylockfile.h"
 
