@@ -9,6 +9,7 @@ nget (0.??) unstable; urgency=low
   * Remove quotes from quoted filenames.
   * Added FAQ.
   * Fixed some leaks. (mostly unnoticable unless you did lots of -[Gg] on the same instance.)
+  * Fixed ngetlite building on platforms without vasprintf (reported by Michael J. Paluka)
 
  -- ??
 
